2006-08-19  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/egolay.cpp: Included "converters.h"

2006-08-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/egolay.cpp: Minor fix - "(int)floor()" replaced with
	"floor_i()".

2006-08-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h,
	itpp/base/itmisc.cpp, itpp/base/itmisc.h: Fixed bug [1542482]. Now
	binom(n, k) works properly. "double binom(int, int)" was
	redundant, because the result of this function was always
	integral. Therefore it was replaced with "int binom(int, int)".
	BTW, moved fact(), binom(), log_binom() and gcd() functions from
	itmisc.{cpp,h} to elmatfunc.{cpp,h}.
	
2006-08-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/modulator_test.cpp, tests/modulator_test.ref: Updated
	tests of 1D and 2D modulators due to the recent redesign of these
	classes.

	* doc/local/index.doc.in: Minor fix ("CVS" -> "SVN") (merged rev.
	633:634 from itpp-3-10 branch).

	* doc/doxygen_html.cfg.in: Include files and file list now contain
	a relative path.

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h,
	tests/modulator_test.cpp, tests/modulator_test.ref,
	tests/pulse_shape_test.ref: Major redesign of one- and
	two-dimensional modulator classes. Modulator_2D is now a base
	class for QAM, PSK and PAM modulators. Moreover, QPSK and PSK
	inherits from the PSK class. Please note that input signal for
	Modulator_2D has now slightly different meaning. BTW, improper
	definition of QPSK constellation is fixed (it was in fact 4-QAM
	modulator previously).

	* itpp/comm/bch.cpp, itpp/comm/egolay.cpp: Added missing include
	files.

	* doc/doxygen_html.cfg.in, doc/local/itpp_header.html: Minor fixes
	in Doxygen config file.

2006-08-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* TODO: Updated to reflect recent changes.

==============================================================================
